fixed almost all dao and services and done tests on userService